--- a/app/templates/AdminModule/RegisterUnit.html
+++ b/app/templates/AdminModule/RegisterUnit.html
@@ -113,6 +113,13 @@
 
                 <input type="number" id="yearOffered" name="year_offered" placeholder="Year Offered" min="1" max="5" required>
                 <input type="number" id="semester_offered" name="semester_offered" placeholder="Semester Offered" min="1" max="2" required>
+
+                <select name="status" required>
+                    <option value="">Select Status</option>
+                    <option value="0">Active</option>
+                    <option value="1">Inactive</option>
+                </select>
+
                 <button type="submit">Register Unit</button> 
             </form>            
         </div>
