--- a/app/templates/AdminModule/StudentRegistration.html
+++ b/app/templates/AdminModule/StudentRegistration.html
@@ -125,6 +125,12 @@
 
                 <input type="month" name="year_intake" placeholder="year_intake" required>
 
+                <select name="international" required placeholder="Select Student Residency">
+                    <option value="">Select Student Residency</option>
+                    <option value="1">International Student</option>
+                    <option value="0">Domestic Student</option>
+                </select>
+
                 <select name="academic_status" id="academic" required>
                     <option value="">Select Status</option>
                     <option value="0">Active</option>
