--- a/app/templates/FacultyAdmin/UnitDashboard.html
+++ b/app/templates/FacultyAdmin/UnitDashboard.html
@@ -43,40 +43,20 @@
         </div>
         <div class="main-content">
             <div class="spaceforbanner">
-                <h2>Manage Course Information</h2>
+                <h2>Manage User Activities</h2>
             </div>
-                    <div class="personal-user-info">
-                        <h2>View Units</h2>
-                        <div class="user-info">
-                            <table id="studentTable">
-                                <thead>
-                                    <tr>
-                                        <th style="width: 25%;">Unit Name</th>
-                                        <th>Unit Code</th>
-                                        <th>School</th>
-                                        <th>Course</th>
-                                        <th>Year Offered</th>
-                                        <th>Semester offered</th>
-                                        <th>Unit Status</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    {% for unit in units %}
-                                        <tr>
-                                            <td>{{ unit.unit_name }}</td>
-                                            <td>{{ unit.unit_code }}</td>
-                                            <td>{{ unit.school }}</td>
-                                            <td>{{ unit.course }}</td>
-                                            <td>{{ unit.year_offered }}</td>
-                                            <td>{{ unit.semester_offered }}</td>
-                                            <td>{{ unit.status }}</td>
-                                        </tr>
-                                        {% endfor %}
-                                </tbody>
-                            </table>
-                        </div>
+                <div class="personal-info">
+                    <h2>Manage User Accounts</h2>
+                <div class="profile-info">
+
+                    <div class="button-container">
+                        <button class="analytics-btn" onclick="window.location.href='{{url_for('main.bbitunits')}}'">
+                            <i class="fa-solid fa-book"></i> BBIT 
+                        </button>
+                        <button class="analytics-btn" onclick="window.location.href='{{url_for('main.compsciunits')}}'">
+                            <i class="fa-solid fa-book"></i> Computer Science
+                        </button>
                     </div>
-                    
                     
             </div>
             </section>
