--- a/app/templates/LecturerModule/LecturerDashboard.html
+++ b/app/templates/LecturerModule/LecturerDashboard.html
@@ -66,6 +66,10 @@
                             <td><strong>Email Address (Personal):</strong></td>
                             <td>{{lecturer.email}}</td>
                         </tr>
+                        <tr>
+                            <td><strong>Status:</strong></td>
+                            <td>{{lecturer.lecturer_status}}</td>
+                        </tr>
                     </table>
                 </div>
             </section>
