--- a/app/templates/FacultyAdmin/FAdminDashboard.html
+++ b/app/templates/FacultyAdmin/FAdminDashboard.html
@@ -30,14 +30,14 @@
     <div class="container">
         <div class="sidebar">
             <h2>EduSense</h2>
-            <p>Admin Navigation Panel</p>
+            <p>Faculty Admin Navigation Panel</p>
             <ul>
                 <li><i class="fa-solid fa-house" style="color: #6F251B;" class = "active"></i>
                     <a href="{{url_for('main.admin_dashboard')}}">Faculty Admin Dashboard</a></li>
                 <li><i class="fa-regular fa-user" style="color: #6F251B"></i></i>
-                    <a href="{{url_for('main.manageusers')}}">Manage User Accounts</a></li>
+                    <a href="">Manage User Accounts</a></li>
                 <li><i class="fa-solid fa-book" style="color:#6F251B;"></i>
-                    <a href="{{url_for('main.managecourseinfo')}}">Manage Course Information</a></li>
+                    <a href="{{url_for('main.famanagecourse')}}">Manage Course Information</a></li>
                 <li><i class="fa-regular fa-bell" style="color:#6F251B;"></i></i>
                     <a href="">View Alerts & Predictions</a></li>
                 <li><i class="fa-solid fa-money-bill" style="color:#6F251B;"></i>
@@ -45,9 +45,9 @@
             </ul>
         </div>
         <div class="main-content">
-                <h1>Welcome, </h1>
+                <h1>Welcome, {{fadmin.full_name}}</h1>
                 <div class="personal-info">
-                    <h2>System Admin Information</h2>
+                    <h2>Faculty Admin Information</h2>
                 <div class="profile-info">
                     <img src="student.jpg" alt="">
                     <div class="student-details">
