--- a/app/templates/FacultyAdmin/ViewCourseUnits.html
+++ b/app/templates/FacultyAdmin/ViewCourseUnits.html
@@ -30,9 +30,9 @@
             <p>Admin Navigation Panel</p>
             <ul>
                 <li><i class="fa-solid fa-house" style="color: #6F251B;" class = "active"></i>
-                    <a href="{{url_for('main.admin_dashboard')}}">Admin Dashboard</a></li>
+                    <a href="">Faculty Admin Dashboard</a></li>
                 <li><i class="fa-regular fa-user" style="color: #6F251B"></i></i>
-                    <a href="{{url_for('main.manageusers')}}">Manage User Accounts</a></li>
+                    <a href="">Manage User Accounts</a></li>
                 <li><i class="fa-solid fa-book" style="color:#6F251B;"></i>
                     <a href="">Manage Course Information</a></li>
                 <li><i class="fa-regular fa-bell" style="color:#6F251B;"></i></i>
@@ -57,7 +57,6 @@
                                         <th>Course</th>
                                         <th>Year Offered</th>
                                         <th>Semester offered</th>
-                                        <th>Unit Status</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -69,7 +68,6 @@
                                             <td>{{ unit.course }}</td>
                                             <td>{{ unit.year_offered }}</td>
                                             <td>{{ unit.semester_offered }}</td>
-                                            <td>{{ unit.status }}</td>
                                         </tr>
                                         {% endfor %}
                                 </tbody>
