--- a/app/templates/StudentModule/StudentDashboard.html
+++ b/app/templates/StudentModule/StudentDashboard.html
@@ -31,6 +31,8 @@
             <ul>
                 <li><i class="fa-solid fa-house" style="color: #6F251B;" class = "active"></i>
                     <a href="{{ url_for('main.student_dashboard') }}">Dashboard</a></li>
+                <li><i class="fa-brands fa-flipboard" style="color:#6F251B;"></i></i>    
+                    <a href="{{ url_for('main.available_units') }}">Unit Registration</a></li>    
                 <li><i class="fa-solid fa-clipboard" style="color:#6F251B;"></i>
                     <a href="">Attendance Records</a></li>
                 <li><i class="fa-solid fa-book" style="color:#6F251B;"></i>
