--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,5 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 
+/* Define the fade-in animation */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+/* Apply the fade-in animation to elements */
+.fade-in {
+    animation: fadeIn 1s ease-in-out;
+}
+
+
 * {
     margin: 0;
     padding: 0;
@@ -41,6 +57,7 @@ body {
 
 
 .sidebar {
+    animation: fadeIn 2s ease-in-out;
     width: 250px;
     background-color: #293040;
     color: white;
@@ -90,6 +107,7 @@ body {
 
 
 .main-content {
+    animation: fadeIn 1.5s ease-in-out;
     flex-grow: 1;
     background-color: white;
     padding: 20px;
