--- a/app/templates/StudentModule/StudentDashboard.html
+++ b/app/templates/StudentModule/StudentDashboard.html
@@ -29,16 +29,12 @@
             <h2>EduSense</h2>
             <p>Student Navigation Panel</p>
             <ul>
-                <li><i class="fa-solid fa-house" style="color: #6F251B;" class = "active"></i>
+                <li><i class="fa-solid fa-house" style="color: #6F251B;" class="active"></i>
                     <a href="{{ url_for('main.student_dashboard') }}">Dashboard</a></li>
-                <li><i class="fa-brands fa-flipboard" style="color:#6F251B;"></i></i>    
-                    <a href="{{ url_for('main.available_units') }}">Unit Registration</a></li>    
-                <li><i class="fa-solid fa-clipboard" style="color:#6F251B;"></i>
-                    <a href="">Attendance Records</a></li>
-                <li><i class="fa-solid fa-book" style="color:#6F251B;"></i>
-                    <a href="">Grades</a></li>
-                <li><i class="fa-solid fa-money-bill" style="color:#6F251B;"></i>
-                    <a href="">Fee Balance</a></li>
+                <li><i class="fa-brands fa-flipboard" style="color:#6F251B;"></i>    
+                    <a href="{{ url_for('main.available_units') }}">Unit Registration</a></li>
+                <li><i class="fa-brands fa-flipboard" style="color:#6F251B;"></i>    
+                    <a href="{{ url_for('main.inprogressunits') }}">In Progress Units</a></li>
                 <li><i class="fa-solid fa-person" style="color:#6F251B;"></i>
                     <a href="">Mentor Information</a></li>
             </ul>
